# holanducia

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  implementation_plan.md  sincronizador_maestro.js  test_facebook.py
backend/: pyproject.toml
backend/app/: main.py
backend/app/core/: database.py
backend/app/services/: opportunity_service.py
docker/: docker-compose.yml
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/app/: index.html
frontend/app/assets/: index-BsW1HhSw.css  index-DblJbZcR.js
frontend/src/: AdvisorChat.jsx  App.css  App.jsx  PropertyIntelligenceModal.jsx  SettingsView.jsx  index.css
insforge/functions/: types.ts
insforge/functions/advisor-chat/: index.ts
insforge/functions/analyze-property/: index.ts
insforge/functions/enrich-catastro/: index.ts
insforge/functions/massive-vector-sync/: index.ts
insforge/functions/monitor-followed/: index.ts
insforge/functions/trigger-scrape/: index.ts
scrapers/: base_scraper.py  boe_scraper.py  clean_data.py  controlled_test.py  facebook_scraper.py  firecrawl_portal_scraper.py  firecrawl_sniper.py  idealista_scraper.py  insforge_connector.py  main.py  milanuncios_scraper.py  requirements.txt  schemas.py
scrapers/agency/: analyst.py  base_agent.py  director.py  hunter.py
scrapers/agency/knowledge/: market_intelligence.md
shared/: insforge_connector.py  schemas.py
